[DONE] RGAA 10.07 (Fix focus visibility) (#940)
* Add outline for buttons

* Improve video cut

* remove Merge artifacts

* Correct a bug on video completion causing `local variable 'list_track' referenced before assignment` exception in some cases

* add the btn-link class to pod-btn-social btns to handle focus related styles
+ correct typos in video encoding msg
 + improve .select2-container--focus css

* Correct Accessibility focus on video_cut & podfile/upload file

* Update lang files

* Push compiled .mo file

---------

--- a/pod/cut/static/css/video_cut.css
+++ b/pod/cut/static/css/video_cut.css
@@ -1,171 +1,178 @@
 #wrapper_cut {
-    position: relative;
-    width: 100%;
-    padding: 50px 10px 20px 10px;
-    border-radius: 10px;
+  position: relative;
+  width: 100%;
+  padding: 50px 10px 20px 10px;
+  border-radius: 10px;
 }
 
 #container_cut {
-    position: relative;
-    width: 100%;
-    height: 100px;
+  position: relative;
+  width: 100%;
+  height: 100px;
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 100%;
-    outline: none;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    background-color: transparent;
-    pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  outline: none;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  background-color: transparent;
+  pointer-events: none;
 }
 
 .slider-track {
-    width: 100%;
-    height: 10px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    border-radius: 5px;
-    background-color: #1f8389;
+  width: 100%;
+  height: 10px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  border-radius: 5px;
+  background-color: var(--pod-primary);
 }
 
+/**
+ * Range track styles
+ **/
+
 input[type="range"]::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
-    height: 5px;
+  -webkit-appearance: none;
+  height: 5px;
 }
 
 input[type="range"]::-moz-range-track {
-    -moz-appearance: none;
-    height: 5px;
+  -moz-appearance: none;
+  height: 5px;
 }
 
 input[type="range"]::-ms-track {
-    appearance: none;
-    height: 5px;
+  appearance: none;
+  height: 5px;
 }
 
+/**
+ * Range thumb styles
+ **/
+
 input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 1.7em;
-    width: 1.7em;
-    background-color: white;
-    cursor: pointer;
-    margin-top: -9px;
-    pointer-events: auto;
-    border-radius: 50%;
-    color: #ffffff;
-    border: 1px solid gray;
+  -webkit-appearance: none;
+  margin-top: -9px;
+  border: 1px solid gray;
+
+  height: 1.7em;
+  width: 1.7em;
+  cursor: pointer;
+  pointer-events: auto;
+  border-radius: 50%;
+  background-color: #FFF;
 }
 
 input[type="range"]::-moz-range-thumb {
-    appearance: none;
-    height: 1.7em;
-    width: 1.7em;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: white;
-    pointer-events: auto;
-    color: #ffffff;
+  appearance: none;
+  height: 1.7em;
+  width: 1.7em;
+  cursor: pointer;
+  pointer-events: auto;
+  border-radius: 50%;
+  background-color: #FFF;
 }
 
 input[type="range"]::-ms-thumb {
-    appearance: none;
-    height: 1.7em;
-    width: 1.7em;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: white;
-    pointer-events: auto;
-    color: #ffffff;
+  appearance: none;
+  height: 1.7em;
+  width: 1.7em;
+  cursor: pointer;
+  pointer-events: auto;
+  border-radius: 50%;
+  background-color: #FFF;
 }
 
-input[type="range"]:active::-webkit-slider-thumb {
-    background-color: #ffffff;
-    border: 3px solid #1f8389;
+#container_cut{
+  /*--bs-btn-focus-shadow-rgb: var(--pod-primary-rgb);*/
+  --bs-btn-focus-shadow-rgb: 200, 200, 253;
+  --bs-btn-focus-box-shadow:0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);;
+}
+
+input[type="range"]:active::-webkit-slider-thumb,
+input[type="range"]:focus-visible::-webkit-slider-thumb {
+  border: 3px solid var(--pod-primary);
+  background-color: var(--bs-info-border-subtle);
+  box-shadow: var(--bs-btn-focus-box-shadow);
+}
+
+input[type="range"]:active::-moz-range-thumb,
+input[type="range"]:focus-visible::-moz-range-thumb {
+  border: 3px solid var(--pod-primary);
+  background-color: rgb(var(--bs-btn-focus-shadow-rgb));
+  box-shadow: var(--bs-btn-focus-box-shadow);
 }
 
 #values_cut {
-    background-color: #1f8389;
-    width: 70%;
-    position: relative;
-    margin: auto;
-    padding: 10px 0;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 25px;
-    color: #ffffff;
+  width: 70%;
+  min-width: 22em;
+  position: relative;
+  margin: auto;
+  padding: 10px 0;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 25px;
 }
 
 #values_cut:before {
-    content: "";
-    position: absolute;
-    height: 0;
-    width: 0;
-    border-top: 15px solid #1f8389;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    margin: auto;
-    bottom: -14px;
-    left: 0;
-    right: 0;
+  content: "";
+  position: absolute;
+  height: 0;
+  width: 0;
+  border-top: 15px solid var(--pod-primary);
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  margin: auto;
+  bottom: -14px;
+  left: 0;
+  right: 0;
 }
 
 #total_time {
-    display: inline-block;
-    box-sizing: unset;
+  display: inline-block;
+  box-sizing: unset;
 }
 
 input[type="time"],
 #wrapper_cut,
 #values_cut {
-    caret-color: transparent;
+  caret-color: transparent;
 }
 
-#button_start, #button_end {
-    font-size: 34px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    margin-top: -6px; 
-}
-
-#button_start:hover, #button_end:hover {
-    color: black;
-    transition-duration: 0.4s;
-}
-
-#button_start {
-    margin-right: 15px;
-}
-
+#button_start,
 #button_end {
-    margin-left: 15px;
+  display: flex;
+  font-size: 34px;
+  line-height: 34px;
 }
 
 #cut_video {
-    display: block;
-    width: 60%;
-    margin: auto;
+  display: block;
+  width: 60%;
+  margin: auto;
 }
 
 .time_input {
-    display: flex;
-    flex-direction: column-reverse;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .time_input label {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 #time_for_cut {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
